# sync-android-clipboard

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
share_android_clipboard/: share.py
sync_android_clipboard/: sync.py
tests/test_example/: test_some_function.py
